--- a/_assets/scss/_about-us.scss
+++ b/_assets/scss/_about-us.scss
@@ -7,6 +7,16 @@
     padding: var(--spacing-layout-elements) 0;
     background: #F6F4EF;
 
+
+    & .content-wrapper {
+
+        @include bp(desktop) {
+            max-width: 100%;
+            padding: 0 2em;
+        }
+    }
+
+
     & .services-info {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -28,6 +38,25 @@
 
         & .media {
             overflow: hidden;
+            grid-column: 1;
+            position: relative;
+
+            &:before {
+                display: block;
+                content: '';
+                padding-top: 56.25%;
+            }
+
+            & img {
+                width: 100%;
+                height: 100%;
+                display: block;
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+            }
 
             @include bp(tablet) {
                 grid-column: 1 / -1;
@@ -35,11 +64,6 @@
 
             @include bp(phone) {
                 grid-row: 1;
-            }
-
-            & img {
-                width: 100%;
-                display: block;
             }
         }
 
