--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <div class="site {% if page.contact-us == true %} contact-us-page {% endif %}">
+    <div class="site">
 
         <input type="checkbox" id="hamburger-menu"  class="hamburger-menu-input">
         <header class="site-header">
