Fixed profile forms

--- a/_assets/scss/_profile.scss
+++ b/_assets/scss/_profile.scss
@@ -45,6 +45,10 @@
             display: grid;
             grid-gap: var(--spacing-layout-elements);
 
+            @include bp(phone) {
+                grid-gap: 1em;
+            }
+
             & p {
                 padding-bottom: 0;
 
@@ -64,7 +68,10 @@
 
             & form {
                 grid-template-columns: repeat(4, 1fr);
-                grid-gap: var(--spacing-layout-elements);
+
+                @include bp(desktop) {
+                    grid-template-columns: repeat(2, 1fr);
+                }
 
                 @include bp(tablet) {
                     grid-template-columns: repeat(2, 1fr);
@@ -72,11 +79,14 @@
 
                 @include bp(phone) {
                     grid-template-columns: 1fr;
-                    grid-gap: 1em;
                 }
 
                 & p {
                     grid-column: span 2;
+
+                    @include bp(desktop) {
+                        grid-column: span 1;
+                    }
 
                     @include bp(tablet) {
                         grid-column: span 1;
@@ -85,6 +95,10 @@
 
                 & input[type='submit'] {
                     grid-column: 2 / 4;
+
+                    @include bp(desktop) {
+                        grid-column: 1 / -1;
+                    }
 
                     @include bp(tablet) {
                         grid-column: 1 / -1;
