--- a/_assets/scss/_about-us.scss
+++ b/_assets/scss/_about-us.scss
@@ -171,7 +171,7 @@
                 cursor: pointer;
 
                 &:hover {
-                    border-radius: 0;
+                    border-radius: 1em;
                 }
 
                 & img {
